--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
+    "gulp-util": "^3.0.7",
     "pug": "^2.0.0-beta6"
   }
 }
