--- a/package.json
+++ b/package.json
@@ -1,43 +1,73 @@
 {
-  "name": "flexbox-layout",
-  "version": "1.0.0",
-  "description": "CSS3 Flexbox layout",
-  "main": "dist/css/flexbox.min.css",
-  "scripts": {
-    "start": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cabaag/flexbox-grid.git"
-  },
-  "keywords": [
-    "flexbox",
-    "grid",
-    "css",
-    "sass"
-  ],
-  "author": "Charly Barranco <caba9313@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/cabaag/flexbox-grid/issues"
-  },
-  "homepage": "https://github.com/cabaag/flexbox-grid#readme",
-  "devDependencies": {
-    "autoprefixer": "^6.5.3",
-    "bower": "^1.7.9",
-    "chalk": "^1.1.3",
-    "cssnano": "^3.8.2",
-    "gulp": "^3.9.1",
-    "gulp-connect": "^5.0.0",
-    "gulp-live-server": "0.0.30",
-    "gulp-postcss": "^6.2.0",
-    "gulp-pug": "^3.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-util": "^3.0.7",
-    "postcss-flexboxfixer": "0.0.5",
-    "postcss-scss": "^0.4.0",
-    "pug": "^2.0.0-beta6"
-  }
+	"name": "flexbox-layout",
+	"version": "1.0.0",
+	"description": "CSS3 Flexbox layout",
+	"main": "dist/css/flexbox.min.css",
+	"scripts": {
+		"start": "gulp default",
+		"format": "prettier --write \"**/*.+(js|scss)\"",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/cabaag/flexbox-grid.git"
+	},
+	"keywords": [
+		"flexbox",
+		"grid",
+		"css",
+		"sass"
+	],
+	"author": "Charly Barranco <caba9313@gmail.com>",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/cabaag/flexbox-grid/issues"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"homepage": "https://github.com/cabaag/flexbox-grid#readme",
+	"devDependencies": {
+		"autoprefixer": "^9.7.3",
+		"bower": "^1.8.8",
+		"chalk": "^3.0.0",
+		"cssnano": "^4.1.10",
+		"eslint": "^6.7.2",
+		"eslint-config-airbnb-base": "^14.0.0",
+		"eslint-plugin-import": "^2.18.2",
+		"gulp": "^4.0.2",
+		"gulp-connect": "^5.7.0",
+		"gulp-live-server": "0.0.31",
+		"gulp-postcss": "^8.0.0",
+		"gulp-pug": "^4.0.1",
+		"gulp-rename": "^1.4.0",
+		"gulp-sass": "^4.0.2",
+		"gulp-util": "^3.0.8",
+		"husky": "^3.1.0",
+		"lint-staged": "^9.5.0",
+		"postcss-flexboxfixer": "0.0.5",
+		"postcss-scss": "^2.0.0",
+		"prettier": "^1.19.1",
+		"pug": "^2.0.4"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"src/**/*.{js,sass}": [
+			"npm run format",
+			"git add"
+		]
+	}
 }
