--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/css/flexbox.min.css",
   "scripts": {
     "start": "gulp",
+    "build": "gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,20 +25,19 @@
   },
   "homepage": "https://github.com/cabaag/flexbox-grid#readme",
   "devDependencies": {
-    "autoprefixer": "^6.5.3",
-    "bower": "^1.7.9",
-    "chalk": "^1.1.3",
-    "cssnano": "^3.8.2",
-    "gulp": "^3.9.1",
-    "gulp-connect": "^5.0.0",
-    "gulp-live-server": "0.0.30",
-    "gulp-postcss": "^6.2.0",
-    "gulp-pug": "^3.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-util": "^3.0.7",
+    "autoprefixer": "^9.7.3",
+    "chalk": "^3.0.0",
+    "cssnano": "^4.1.10",
+    "gulp": "^4.0.2",
+    "gulp-connect": "^5.7.0",
+    "gulp-live-server": "0.0.31",
+    "gulp-postcss": "^8.0.0",
+    "gulp-pug": "^4.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-util": "^3.0.8",
     "postcss-flexboxfixer": "0.0.5",
-    "postcss-scss": "^0.4.0",
-    "pug": "^2.0.0-beta6"
+    "postcss-scss": "^2.0.0",
+    "pug": "^2.0.4"
   }
 }
